src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn2.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn2.rs:9:1
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `A`, got `B`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn2.rs:9:1
   |
LL | fn f<A: ToString + Clone, B: ToString + Clone>(a: A, b: B) -> (X<A, B>, X<B, A>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

